fixed the sign out spacing and made a bar for the mySaves view

--- a/src/App.css
+++ b/src/App.css
@@ -55,6 +55,22 @@
   box-shadow: 0px 3px 10px rbga(0,0,0,.5);
 }
 
+.StickyBar{
+  display: grid;
+  position: fixed;
+  top:0;
+  left: 0;
+  grid-column: 1/4;
+  grid-column-gap: 10px;
+  align-content: flex-end;
+  width: 100%;
+  height: 40px;
+  padding: 10px;
+  box-shadow: 0px 0px 10px rbga(0,0,0,.6);
+  background-color: #FAFAFA;
+  z-index: 2;
+}
+
 
 .Highlights-button{
   grid-row: 1;
@@ -249,7 +265,7 @@
   grid-column: 4/4;
 
 }
-.Allow-access-button, .sign-out{
+.Allow-access-button{
   max-width: 270px;
   background-color: #ffffff;
   text-align: center;
@@ -262,13 +278,12 @@
   cursor: pointer;
 }
 
-.sign-out, .Allow-access-button {
+.Allow-access-button {
   position:relative;
   margin-bottom:50px;
   margin-top: 65vmin;
   margin-left: 10%;
   margin-right: 10%;
-
 }
 
 a:link{
@@ -294,6 +309,10 @@ a:hover, a:visited{
 
 .Fab-intstruction{
   display: grid;
+  position:fixed;
+  left: 0px;
+  bottom: 0px;
+  padding-left: 24px;
 }
 
 .Fab-text{
@@ -350,23 +369,27 @@ a:hover, a:visited{
   left: 24px;
 
 }
-.back, .skip{
 
-  font-size: 17px;
+.back, .skip, .sign-out{
+  font-size: 14px;
+}
+
+.back, .skip, .sign-out{
   font-weight: bold;
   color: #6B172E;
   font-family: sans-serif;
   text-decoration: none;
-
-
 }
 
-.skip{
+.skip, .sign-out{
   position: absolute;
   top: 24px;
   right:24px;
   text-align: right;
+}
 
+.sign-out{
+  padding-right: 20px;
 }
 
 .App-link {
@@ -489,7 +512,7 @@ a:hover, a:visited{
   grid-column: 1/span 4;
   max-width: 600px;
   display: block;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
 }
 
 .Museum-header{
